Fix layout issue for home page

--- a/src/frontend/hackerhub-frontend/static/css/app.css
+++ b/src/frontend/hackerhub-frontend/static/css/app.css
@@ -68,7 +68,12 @@ body {
     background-color: rgb(58, 58, 61);
     width: 100vw;
     height: 100vh;
+    overflow: auto;
     color: white;
+}
+
+#home .column {
+    background-color: rgb(58, 58, 61);
 }
 
 #home .login {
